Changelog
=========


1.7.1 (unreleased)
------------------

- Nothing changed yet.


1.7.0 (2017-02-14)
------------------

- Fix news mopage template. [mbaechtold]

- Use "ftw.keywordwidget" as the widget used to enter subjects/keywords.
  You may need to install "select2" manually. See the README for more
  information. [mbaechtold]

- Fix the news portlet not able to render if subjects contain umlauts. [mbaechtold]

- Make News and NewsFolder linkable in TinyMCE
  [raphael-s]

- Unify news- and archive portlet markup

  - Use porlet class for wrapper on news-portlet.
  - Use header for title and section for body.

  [Kevin Bieri]


1.6.2 (2017-01-24)
------------------

- Add RSS views which are backwards compatible with ftw.contentpage
  (requires a custom browser layer for ftw.news).
  [mbaechtold]


1.6.1 (2017-01-17)
------------------

- Mopage: exclude file listings and galleries. [jone]


1.6.0 (2017-01-16)
------------------

- Add a new field on news items which can be used to define a custom external
  url (useful for mobile apps). [mbaechtold]


1.5.0 (2017-01-11)
------------------

- Users having the permission to add news items will see
  inactive news items in the news listing block. [mbaechtold]

- Fix small RST Syntax error in readme file. [raphael-s]


1.4.6 (2016-12-06)
------------------

- Fix filter for subjects containing umlauts in newslistingblock.
  [mathias.leimgruber]

- Mopage: fix textlead max length (from 100 to 1000). [jone]

- Fix news item class identifier.
  [Kevin Bieri]


1.4.5 (2016-11-11)
------------------

- Do not show news time. [jone]


1.4.4 (2016-11-10)
------------------

- Fix encoding error in mopage endpoint.
  [jone]


1.4.3 (2016-10-20)
------------------

- Fix chameleon support for mopage export. [jone]


1.4.2 (2016-10-18)
------------------

- Mopage: fix CDATA escaping. [jone]


1.4.1 (2016-09-30)
------------------

- Mopage endpoint: fix entity escaping. [jone]
