@@ -5,7 +5,8 @@ Changelog
 1.7.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Include inactive news items in the listing view and the news portlet
+  if the user has the permission to add news items. [mbaechtold]
 
 
 1.7.0 (2017-02-14)
